--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  runevm_fl:
-    git:
-      url: https://github.com/hotg-ai/runevm_fl.git 
+  runevm_fl: ^0.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
